--- a/style.css
+++ b/style.css
@@ -57,21 +57,21 @@ ul {
 
 .foto {
     margin-top: 12px;
-    width: 86px;
-    height: 86px;
+    width: 120px;
+    height: 120px;
 }
 
 #about-foto {
-    background-image: url('img/cfenollosa.jpg');   
-    height: 300px;
-    width: 800px;
+    background-image: url('img/felipheggaliza.jpg');   
+    height: 400px;
+    width: 640px;
     position: relative;
 }
 
 #text-foto {
     position: absolute;
-    bottom: 24px;
-    left: 24px;
+    bottom: 20px;
+    left: 380px;
     color: white;
     font-weight: bold;
     background: rgb(0, 0, 0); /* fallback color */
@@ -367,7 +367,7 @@ table.rating {
     -moz-border-radius: 4px;
     border-radius: 4px;
     color: white !important;
-    background-color: #336799;
+    background-color: #336750;
     padding-left: 12px;
     padding-right: 12px;
     padding-top: 6px;
